<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_job"
        android:icon="@drawable/baseline_work_24"
        android:title="@string/pekerjaan" />

    <item
        android:id="@+id/navigation_add_job"
        android:icon="@drawable/baseline_add_box_24"
        android:title="@string/add" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/baseline_assignment_turned_in_24"
        android:title="@string/penawaran" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />

</menu>