<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="corp.jasane.provider.modules.home.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_job"
        android:name="corp.jasane.provider.modules.home.ui.ui.job.JobFragment"
        android:label="@string/pekerjaan"
        tools:layout="@layout/fragment_job" />

    <fragment
        android:id="@+id/navigation_add_job"
        android:name="corp.jasane.provider.modules.home.ui.ui.addJob.AddJobFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_job" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="corp.jasane.provider.modules.home.ui.ui.offers.OffersFragment"
        android:label="@string/penawaran"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="corp.jasane.provider.modules.home.ui.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>